Add hover + fix nom

--- a/www/index.html
+++ b/www/index.html
@@ -70,7 +70,7 @@
                 <p class="galery__card__description">Le musée possède la plus importante collection de peintures impressionnistes et post-impressionnistes au monde, avec près de 1 100 toiles au total sur plus de 3 450.  Des expositions temporaires monographiques ou thématiques concernent périodiquement l’œuvre d’un artiste, un courant ou une question d’histoire de l’art.
                 </p>
                 <div class="galery__card__bottom">
-                    55 projets EAC avec 40 établissements
+                    55 projets EAC avec 40 établissements scolaires
                 </div>
             </div>
             <div class="galery__card galery__card--clickable">
@@ -97,7 +97,7 @@
                             <p class="galery__card__description">Le musée possède la plus importante collection de peintures impressionnistes et post-impressionnistes au monde, avec près de 1 100 toiles au total sur plus de 3 450.  Des expositions temporaires monographiques ou thématiques concernent périodiquement l’œuvre d’un artiste, un courant ou une question d’histoire de l’art.
                             </p>
                             <div class="galery__card__bottom">
-                                55 projets EAC avec 40 établissements
+                                55 projets EAC avec 40 établissements scolaires
                             </div>
                         </div>     
 </div>
