Update background image

--- a/www/index.html
+++ b/www/index.html
@@ -53,7 +53,7 @@
     <div class="main">
         <div class="galery galery--force-scrollbar" id="galery">
             <div class="galery__card galery__card--clickable">
-                <div class="galery__card__image" style="-webkit-mask-image: url('images/icons/music-conductor-filled-50.png')"></div>
+                <div class="galery__card__image" style="background-image: url('images/icons/music-conductor-filled-50.png')"></div>
                 <h2 class="galery__card__title">Orchestre national d'Île-de-France</h2>
                 <p class="galery__card__description">Formation symphonique de notoriété internationale, l'Orchestre national d'Île-de-France propose une centaine de concerts par an. Sa mission : la diffusion du répertoire symphonique en Île-de-France.
                 </p>
@@ -239,7 +239,7 @@
                         } else if(type == "Cinéma") {
                             icon = "movie";
                         }
-                        child.src = "images/icons/"+icon+"-filled-50.png";
+                        child.style["background-image"] = "url(images/icons/"+icon+"-filled-50.png)";
                     } else if(child.className == "galery__card__title") {
                         child.innerHTML = acteur[0];
                     } else if(child.className == "galery__card__description") {
