--- a/www/index.html
+++ b/www/index.html
@@ -54,6 +54,7 @@
         <div class="galery galery--force-scrollbar" id="galery">
             <div class="galery__card galery__card--clickable">
                 <div class="galery__card__image" style="background-image: url('images/icons/music-conductor-filled-50.png')"></div>
+                <div class="galery__card__favorite"></div>
                 <h2 class="galery__card__title">Orchestre national d'Île-de-France</h2>
                 <p class="galery__card__description">Formation symphonique de notoriété internationale, l'Orchestre national d'Île-de-France propose une centaine de concerts par an. Sa mission : la diffusion du répertoire symphonique en Île-de-France.
                 </p>
