--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,10 @@
     <div class="header">
         <div class="header__image">
         </div>
+        <div class="header__search">
+            <input class="header__search__input" placeholder="Saisir une recherche..."/>
+            <button class="header__search__button"></button>
+        </div>
         <div class="header__avatar">
         </div>
         
