--- a/www/index.html
+++ b/www/index.html
@@ -329,7 +329,7 @@
                             iconType = "museum";
                         } else if(type != "Bibliothèque/Médiathèque") {
                             iconType = "library";
-                        } else if(type != "Musique/Orchestre") {
+                        } else if(type != "Musique") {
                             iconType = "music";
                         }
 
@@ -433,7 +433,7 @@
                         var icon = "museum";
                         if(type == "Théâtre") {
                             icon = "theatre-mask";
-                        } else if(type == "Musique/Orchestre") {
+                        } else if(type == "Musique") {
                             icon = "music";
                         } else if(type == "Bibliothèque/Médiathèque") {
                             icon = "library";
