--- a/www/index.html
+++ b/www/index.html
@@ -7,16 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">    
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
-    <link rel="stylesheet" href="https://rawgit.com/Leaflet/Leaflet.markercluster/v1.2.0/dist/MarkerCluster.css" />
-    <link rel="stylesheet" href="https://rawgit.com/Leaflet/Leaflet.markercluster/v1.2.0/dist/MarkerCluster.Default.css" />
-    <link rel="stylesheet" href="https://cdn.rawgit.com/Pixabay/JavaScript-autoComplete/1.0.4/auto-complete.css" />
-    <link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css" />
     <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
-    <script src="https://rawgit.com/Leaflet/Leaflet.markercluster/v1.2.0/dist/leaflet.markercluster.js"></script>
-    <script src="https://cdn.rawgit.com/Pixabay/JavaScript-autoComplete/1.0.4/auto-complete.min.js"></script>
     <script src="js/csv.js"></script>
-    <script src="https://cdn.rawgit.com/Airtable/airtable.js/d6078597/build/airtable.browser.js"></script>
     <style type="text/css">
         html, body { 
             height: 100%; 
@@ -124,10 +117,9 @@
             minZoom: 3
         });
         
-        L.tileLayer(
-        'http://{s}.tile.openstreetmap.fr/openriverboatmap/{z}/{x}/{y}.png', {
-            attribution: '&copy; <a href="http://openstreetmap.org">OpenStreetMap</a> Contributors & <a href="http://openstreetmap.fr/">OSM FR</a>',
+        L.tileLayer('https://{s}.tile.openstreetmap.se/hydda/full/{z}/{x}/{y}.png', {
             maxZoom: 18,
+            attribution: 'Tiles courtesy of <a href="http://openstreetmap.se/" target="_blank">OpenStreetMap Sweden</a> &mdash; Map data &copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
         }).addTo(map);
 
 
